--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>MyAngularApp</title>
-  <base href="/">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1 class="logo"><span class="logo__highlights">Hello,</span>Walter Mark!!!!!</h1>
+<h1 class="logo"><span class="logo__highlights">Hello,</span>Walter Mark!!!</h1>
 </body>
 </html>
