--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-<h1 class="logo"><span class="logo__highlights">Hello,</span>Walter Mark!!!!!</h1>
+<h1 class="logo"><span class="logo__highlights">Hello,</span>Walter Mark!!!!!!</h1>
 </body>
 </html>
